[package]
name = "oken"
version = "0.1.0"
edition = "2024"
description = "A smarter SSH CLI"
license = "MIT"
repository = "https://github.com/linkwithjoydeep/oken"
homepage = "https://github.com/linkwithjoydeep/oken"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
glob = "0.3"
ratatui = "0.29"
crossterm = "0.28"
clap_complete = "4"
ureq = "2"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
